--- a/HarveyComics/HarveyComics.html
+++ b/HarveyComics/HarveyComics.html
@@ -10,6 +10,20 @@
 <body>
 <img src="HarveyComics1.jpg">
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="HarveyComics1.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Harvey Comics (also known as Harvey World Famous Comics, Harvey Publications, Harvey Comics Entertainment, Harvey Hits, Harvey Illustrated Humor, and Harvey Picture Magazines) was an American comic book publisher, founded in New York City by Alfred Harvey in 1941, after buying out the small publisher Brookwood Publications. His brothers, Robert B. and Leon Harvey, joined shortly after. The company soon got into licensed characters, which by the 1950s, became the bulk of their output. The artist Warren Kremer is closely associated with the publisher.
 </p><p>
 Harvey's signature mascot is "Joker", a harlequin jack-in-the-box character. 
@@ -44,16 +58,7 @@ Titles
 <li>Captain 3-D
 <li>Captain Flower
 <li>Captain Freedom
-<li>Casper and Friends
-<li>Casper and Nightmare
-<li>Casper and Spooky
-<li>Casper and The Ghostly Trio
-<li>Casper and Wendy
-<li>Casper In Space
-<li>Casper Spaceship
-<li>Casper the Friendly Ghost
-<li>Casper TV Showtime
-<li>Casper's Ghostland
+<li><a href="../Casper/Casper.html">Casper</a>
 <li>Chamber of Chills
 <li>Clown Comics
 <li>Devil Kids Starring Hot Stuff
@@ -96,67 +101,13 @@ Titles
 <li>Pebbles and Bamm Bamm
 <li>Phantom
 <li>Pink Panther
-<li>Popeye
+<li><a href="../Popeye/Popeye.html">Popeye</a> (1993)
 <li>Rags Rabbit
 <li>Richie Rich
-<li>Richie Rich Adventure Digest
-<li>Richie Rich and...
-<li>Richie Rich and Billy Bellhops
-<li>Richie Rich and Cadbury
-<li>Richie Rich and Casper
-<li>Richie Rich and Dollar The Dog
-<li>Richie Rich and Dot
-<li>Richie Rich and Gloria
-<li>Richie Rich and His Girlfriends
-<li>Richie Rich and His Mean Cousin Reggie
-<li>Richie Rich and Jackie Jokers
-<li>Richie Rich and New Kids on the Block
-<li>Richie Rich and Professor Keenbean
-<li>Richie Rich Bank Books
-<li>Richie Rich Best of the Years Digest
-<li>Richie Rich Big Book
-<li>Richie Rich Big Bucks
-<li>Richie Rich Billions
-<li>Richie Rich Cash
-<li>Richie Rich Cash Money
-<li>Richie Rich Casper and Wendy National League
-<li>Richie Rich Diamonds
-<li>Richie Rich Digest
-<li>Richie Rich Digest Stories
-<li>Richie Rich Digest Winners
-<li>Richie Rich Dollars and Cents
-<li>Richie Rich Fortunes
-<li>Richie Rich Gems
-<li>Richie Rich Giant Size
-<li>Richie Rich Gold and Silver
-<li>Richie Rich Gold Nuggets Digest
-<li>Richie Rich Holiday Digest
-<li>Richie Rich Inventions
-<li>Richie Rich Jackpots
-<li>Richie Rich Meets Timmy Time
-<li>Richie Rich Million Dollar Digest
-<li>Richie Rich Millions
-<li>Richie Rich Money World
-<li>Richie Rich Money World Digest
-<li>Richie Rich Profits
-<li>Richie Rich Relics
-<li>Richie Rich Riches
-<li>Richie Rich Success Stories
-<li>Richie Rich Summer Bonanza
-<li>Richie Rich Treasure Chest Digest
-<li>Richie Rich Vacation Digest
-<li>Richie Rich Vacations Digest
-<li>Richie Rich Vault of Mystery
-<li>Richie Rich Zillionz
-<li>Sad Sack and the Sarge
-<li>Sad Sack Comics
-<li>Sad Sack Laugh Special
-<li>Sad Sack's Army Life
-<li>Sad Sack's Funny Friends
-<li>Sad Sad Sack World
+<li><a href="../SadSack/SadSack.html">Sad Sack</a>
 <li>Scooby-Doo
-<li>Speed Comics: 44 issues (Oct. 1939 – Jan./Feb. 1947)
-<li>The Spirit
+<li><a href="../SpeedComics/SpeedComics.html">Speed Comics</a> (1941)
+<li><a href="../Spirit/Spirit.html">Spirit</a> (1966)
 <li>Spitfire (Mahon)
 <li>Spooky Haunted House
 <li>Spooky Spooktown
@@ -169,8 +120,7 @@ Titles
 <li>Super Richie
 <li>Thrill-O-Rama
 <li>Tom and Jerry
-<li>TV Casper and Company
-<li>Ultraman
+<li><a href="../Ultraman/Ultraman.html">Ultraman</a> (1993)
 <li>Underdog
 <li>Unearthly Spectaculars
 <li>Wendy and the New Kids On The Block
