--- a/index.html
+++ b/index.html
@@ -4062,6 +4062,13 @@
 </tr>
 
 <tr>
+<td>Captain Midnight</td>
+<td>1938</td>
+<td>Fawcett</td>
+<td><a href="CaptainMidnight/CaptainMidnight.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Captain Planet and the Planeteers</td>
 <td>1991</td>
 <td>Marvel</td>
@@ -4178,6 +4185,13 @@
 <td>1949</td>
 <td>Marvel</td>
 <td><a href="CaseyCrimePhotographer/CaseyCrimePhotographer.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casper the Friendly Ghost</td>
+<td>1939</td>
+<td>Paramount</td>
+<td><a href="Casper/Casper.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9961,6 +9975,13 @@
 </tr>
 
 <tr>
+<td>Jingle Jangle</td>
+<td>1942</td>
+<td>Eastern Color</td>
+<td><a href="JingleJangle/JingleJangle.html">Details</a></td>
+</tr>
+
+<tr>
 <td>JLA</td>
 <td>1997</td>
 <td>DC</td>
@@ -10973,6 +10994,13 @@
 <td>1949</td>
 <td>Marvel</td>
 <td><a href="LittleLizzie/LittleLizzie.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Little Lulu</td>
+<td>1935</td>
+<td>Saturday Evening Post</td>
+<td><a href="LittleLulu/LittleLulu.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12107,6 +12135,20 @@
 <td>2012</td>
 <td>Creator</td>
 <td><a href="MegaDrive/MegaDrive.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Megahex</td>
+<td>2014</td>
+<td>Fantagraphics</td>
+<td><a href="SimonHanselmann/SimonHanselmann.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Megg &amp; Mogg in Amsterdam</td>
+<td>2016</td>
+<td>Fantagraphics</td>
+<td><a href="SimonHanselmann/SimonHanselmann.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15966,6 +16008,13 @@
 <td>1959</td>
 <td>Charlton</td>
 <td><a href="SpaceWar/SpaceWar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sparkle Comics</td>
+<td>2018</td>
+<td>Publisher</td>
+<td><a href="SparkleComics/SparkleComics.html">Details</a></td>
 </tr>
 
 <tr>
