--- a/Falcon/Falcon.html
+++ b/Falcon/Falcon.html
@@ -2,19 +2,36 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>the Falcon</title>
 </head>
 
 <body>
-<h2>the Falcon</h2>
 <img src="Falcon.jpg">
-<img src="Falcon2.jpg">
-<img src="Falcon3.jpg">
-<img src="Falcon4.jpg"> <br>
-Series: 4 issue mini-series 1983 <br>
-Publisher: Marvel<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Falcon.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Falcon2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Falcon3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Falcon4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Falcon5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Falcon6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Falcon7.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+4 issue mini-series in 1983, 8 issues in 2007 - 2008 by Marvel
+</p><p>
 Issue #1: "Winners and Losers!" Story by Jim Owsley. Art by Paul Smith and Vince Colletta. Captain Americas partner steps into the spotlight! A gang war is stirring and threatens to destroy the city. Meanwhile, Falcon pushes his high-flying skills to the limit to stop an armored saboteur. 
 </p><p>
 Issue #2: "Legion!" Written by Jim Owsley. Pencils by Mark Bright. Inks by Mike Gustowch. It is 50 tons of walking solid steel. It is armed with the deadliest offensive weaponry known to man. It can think. It can kill. Its called a Sentinel, and its out to destroy the Falcon. 
