--- a/JackKirby/JackKirby.html
+++ b/JackKirby/JackKirby.html
@@ -137,7 +137,7 @@ I wanted to link all of the covers Kirby has done, but there are so many, it may
 <li><a href="../CaptainVictory/CaptainVictory.html">Captain Victory</a>
 <li>Celestials (comics)
 <li>Celia Rawlings
-<li>Challengers of the Unknown
+<li><a href="../ChallengersOfTheUnknown/ChallengersOfTheUnknown.html">Challengers of the Unknown</a>
 <li>Circus of Crime
 <li>Colonel Kragg
 <li>Colonel Kuro Chin
