--- a/SpaceWar/SpaceWar.html
+++ b/SpaceWar/SpaceWar.html
@@ -58,7 +58,15 @@
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-
+If any genre could claim to be under-represented in comics, it would have to be science-fiction, which when you consider the visual nature of comics and the lack of design limits, is quite surprising. Charlton is one of the few publishers who kept SF titles running throughout the late Golden and Age and well into the Silver Age with series like SPACE WAR. Calling on talents such as Steve Ditko and Dick Giordano, to name just a couple, SPACE WAR enjoyed a healthy 5-year run (1959-1964).
+</p><p>
+Issue #1 "Abandon Spaceship," "The Sun Maker," "Planet of No Return," and "Moon Trap." Dick Giordano cover. 
+</p><p>
+Issue #2 Cover by Bill Fraccio? Stories by Joe Gill? and unknown. Art by Bill Montes?, Charles Nicholas & Sal Trapani, Bill Fraccio?, Bill Molno & Vince Alascia and unknown. Featuring: "Dr. Meade's Last War"; "The Guardian Planet"; "Encounter in Space!"; "So Small"; 1-page untitled Li'l Wise Guy story; and the 2-page text story "Another Chance From Life"!
+</p><p>
+Issue #3 "The Day the Earth Died," "Pluto the Pirate Planet," "Test Case," and "The World of the Firebirds." Art by "Cha-Nic" and Sal Trapani. 
+</p><p>
+Issue #4 "Dreamer in Space" (art by Steve Ditko), "Disks of Doom," "Lunar Outpast" (pencils by Charles Nicholas, inks by Sal Trapani), and "Earth's Darkest Hour." Ditko cover.
 </p>
 </body>
 </html>
