--- a/StanleyMorse/StanleyMorse.html
+++ b/StanleyMorse/StanleyMorse.html
@@ -36,61 +36,44 @@ During the 1950s boom in horror comics, Morse "produced several acutely vile hor
 </p><p>
 Artist Steve Ditko, the future co-creator of Spider-Man, began his professional comics career at Key in early 1953, illustrating writer Bruce Hamilton's science-fiction story "Stretching Things" for Key's Stanmor Publications, which sold the story to Ajax/Farrell, where it finally found publication in Fantastic Fears #5 (Feb. 1954). Ditko's first published work was his second professional story, the six-page "Paper Romance" in Daring Love #1 (Oct. 1953), published by Key's Gillmor Magazines.
 </p><p>
-Titles by Imprint
+Titles
 </p><p>
-Aragon<br>
-<li>Battle Fire #1-4, #6 (April 1955 - May 1956; no issue #5)
-<li>Mister Mystery (see Media, below)
-<li>Mutiny #1-3 (Oct. 1954 - Feb. 1955)
-<li>Navy Task Force #1-6, #8 (Dec. 1954 - April 1956; no issue #7)
-<li>Weird Tales of the Future 
-</p><p>
-Gillmor
-</p><p>
-<li>Action Adventure Comics #2-4 (June-Oct. 1955)
-<li>Climax #1-2 (July-Sept. 1955)
-<li>Daring Love #1 (Oct. 1953) / '"Radiant Love #2-6 (Dec. 1953 - Aug. 1954)
-<li>Real Adventure Comics #1 (April 1955)
-<li>Super Fun #1 (Jan. 1956)
-<li>Weird Mysteries #1-12 (Oct. 1952 - Sept. 1954)
-<li>Western Rough Riders #1-4 (Nov. 1954 - May 1955)
-</p><p>
-Key Publications / Medal Comics
-</p><p>
-<li>Flying Aces #1-5 (July 1955 - May 1956; Medal Comics imprint, #3-5)
-<li>Hector Comics #1-3 (Nov. 1953 - March 1954)
-<li>Navy Patrol #1-4 (May-Nov. 1955; Medal Comics imprint, #4)
-<li>Peter Cottontail #1-2 (Jan.-March 1954)
-<li>Peter Cottontail Three Dimensional Comics #1 (Feb. 1954)
-<li>Prize Mystery #1-3 (May-Sept. 1955)
-<li>Silver Kid Western #1-5 (Oct. 1954 - July 1955)
+<li>Action Adventure Comics (1955)
+<li>Battle Attack (1954)
+<li>Battle Cry (1952)
+<li>Battle Fire (1955)
+<li>Battle Heroes (1966)
+<li>Battle Squadron (1955)
+<li>Chilling Tales of Horror (1969)
+<li>Climax (1955)
+<li>Daring Love (1953)
+<li>Diary Confessions (1955)
+<li>Flying Aces (1955)
+<li>Ghoul Tales (1970)
+<li>Hector Comics (1953)
+<li>Ideal Romance (1954)
+<li>Junior Hopp Comics (1952)
+<li><a href="../MisterMystery/MisterMystery.html">Mister Mystery</a> (1951)
+<li>Mister Universe	(1951)
+<li>Mutiny (1954)
+<li>Navy Patrol (1955)
+<li>Navy Task Force	(1954)
+<li>Pete the Panic (1955)
+<li>Peter Cottontail (1954)
+<li>Peter Cottontail Three Dimensional Comics (1954)
+<li>Prize Mystery (1955)
+<li>Radiant Love (1953) 
+<li>Real Adventure Comics (1955)
+<li>Shock (1969)
+<li>Silver Kid Western (1954)
+<li>Stark Terror (1970)
+<li>Super Fun (1956)
 <li>Tender Romance (1953)
-<li>Weird Chills #1-3 (July-Nov. 1954)
-<li>Weird Tales of the Future #1-8 (March 1952 - July 1953; S. P. M. #1-2, 4 at least; Aragon #6 at least)
-</p><p>
-Media
-</p><p>
-<li>Mister Mystery #1-19 (Sept. 1951 - Oct. 1954); Aragon imprint #7-19
-</p><p>
-SPM
-</p><p>
-<li>Junior Hopp Comics #1-3 (Jan.-July 1952)
-<li>Weird Tales of the Future (see Key, above)
-</p><p>
-Stanmor
-</p><p>
-<li>Battle Attack #1-8 (Oct. 1954 - Dec. 1955)
-<li>Battle Cry #1-20 (May 1952 - Sept. 1955)
-<li>Battle Squadron #1-5 (April 1955 - Dec. 1955)
-<li>Pete the Panic #1 (Nov. 1955)
-<li>Warpath #1-3 (Nov. 1954 - April 1955)
-</p><p>
-Timor
-</p><p>
-<li>Algie #1-3 (Dec. 1953 - April 1954)
-<li>Animal Adventures #1-3 (Dec. 1953 - April 1954)
-<li>Blazing Western #1-5 (Jan.-Sept. 1954)
-<li>Crime Detector #1-5 (Jan.-July 1954)
+<li>Warpath (1954)
+<li><a href="../WeirdChills/WeirdChills.html">Weird Chills</a> (1954)
+<li><a href="../WeirdMysteries/WeirdMysteries.html">Weird Mysteries</a> (1952)
+<li>Weird Tales of the Future (1952)
+<li>Western Rough Riders (1954)
 </p>
 
 </body>
