--- a/index.html
+++ b/index.html
@@ -4279,6 +4279,13 @@
 </tr>
 
 <tr>
+<td>Challengers of the Unknown</td>
+<td>1958</td>
+<td>DC</td>
+<td><a href="ChallengersOfTheUnknown/ChallengersOfTheUnknown.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Chamber of Chills</td>
 <td>1951</td>
 <td>Harvey</td>
@@ -6497,6 +6504,13 @@
 <td>1976</td>
 <td>Creator</td>
 <td><a href="DustinNguyen/DustinNguyen.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dynamic Comics</td>
+<td>1943</td>
+<td>Chesler</td>
+<td><a href="DynamicComics/DynamicComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14947,6 +14961,13 @@
 </tr>
 
 <tr>
+<td>Rural Home</td>
+<td>1944</td>
+<td>Publisher</td>
+<td><a href="RuralHome/RuralHome.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rusty</td>
 <td>1946</td>
 <td>Marvel</td>
@@ -16316,6 +16337,13 @@
 <td>2016</td>
 <td>Marvel</td>
 <td><a href="StarbrandAndNightmask/StarbrandAndNightmask.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Star Publications</td>
+<td>1949</td>
+<td>Publisher</td>
+<td><a href="StarPublications/StarPublications.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18186,6 +18214,13 @@
 <td>1951</td>
 <td>Ace</td>
 <td><a href="WebOfMystery/WebOfMystery.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Weird Chills</td>
+<td>1954</td>
+<td>Stanley Morse</td>
+<td><a href="WeirdChills/WeirdChills.html">Details</a></td>
 </tr>
 
 <tr>
