--- a/LBCole/LBCole.html
+++ b/LBCole/LBCole.html
@@ -26,6 +26,9 @@
 <div class="mySlides" style="text-align: center;"><img src="LBCole05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LBCole06.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="LBCole07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../MaskComics/MaskComics01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../MaskComics/MaskComics02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../TerrifyingTales/TerrifyingTales03.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -35,7 +38,7 @@ Leonard Brandt Cole (August 28, 1918–December 5, 1995) was a comic book artist
 </p><p>
 Cole's comic book career started in the early 1940s, mainly as a cover artist for titles such as Suspense Comics (Et-Es-Go Magazines) and Contact Comics (Aviation Press). He soon became known for his distinctive covers: examples include the covers to Mask Comics #1, Mask Comics #2 (Rural Home), Contact Comics #12, and Captain Flight Comics #11 (Four Star Publications). An avid science fiction fan, Cole was known for slipping in sci-fi elements even when they weren't appropriate, such as rocket ships and ray guns appearing on the covers of Captain Flight Comics and Contact Comics. Both titles were supposed to be devoted to contemporary aviation. During this time, Cole created the character "Wiggles the wonderworm" who appeared in five issues of Taffy Comics, published by Rural Home/Orbit Publications.
 </p><p>
-From 1942–1948, Cole ran his own comics studio, often packaging work for a variety of publishers. In 1949, publisher Novelty Press sold its characters and artwork to Cole, who was the cover artist for Novelty's Blue Bolt Comics. Using his new assets, Cole began Star Publications, which operated from 1949 to 1955.
+From 1942–1948, Cole ran his own comics studio, often packaging work for a variety of publishers. In 1949, publisher Novelty Press sold its characters and artwork to Cole, who was the cover artist for Novelty's Blue Bolt Comics. Using his new assets, Cole began <a href="../StarPublications/StarPulications.html">Star Publications</a>, which operated from 1949 to 1955.
 </p><p>
 After the closure of Star, Cole continued doing cover illustrations, many for Classics Illustrated Junior. In the early 1960s, Cole was art director and editor at Dell Comics. From the mid-1960s through the 1970s, Cole created instructional materials and audio-visuals for University Films.
 </p><p>
