--- a/AceMagazines/AceMagazines.html
+++ b/AceMagazines/AceMagazines.html
@@ -18,7 +18,22 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AceMagazines3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AtomicWar/AtomicWar1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AceMagazines1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AceMagazines2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Beyond/Beyond01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AceMagazines4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AceMagazines5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AceMagazines6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AceMagazines7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AceMagazines8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AceMagazines9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../ScienceComics/ScienceComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SpaceAction/SpaceAction1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../SpaceAction/SpaceAction1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../WebOfMystery/WebOfMystery1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AceMagazines10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -28,18 +43,21 @@ Magazine Publishers was a pulp magazine publishing house established by Harold H
 </p><p>
 In 1952 Wyn founded Ace Books, and by the mid-fifties Wyn had sold most or all of his hardback rights, and may also have ceased publishing magazines by that time to focus on Ace Books.
 </p><p>
-<li>Ace Detective Magazine
-<li>Ace Mystery
-<li>Ace Sports
-<li><a href="../Beyond/Beyond.html">The Beyond</a>
-<li>Detective-Dragnet (later changed to Ten Detective Aces)
-<li>Flying Aces (later became Flying Models and sold off)
-<li>Love Fiction Weekly
-<li><a href="../ScienceComics/ScienceComics.html">Science Comics</a>
-<li>Secret Agent X
-<li><a href="../SpaceAction/SpaceAction.html">Space Action</a>
-<li><a href="../WebOfMystery/WebOfMystery.html">Web of Mystery</a>
-<li>Western Trails
+<li><a href="AceMagazines3.jpg">Andy</a> (1948)
+<li><a href="../AtomicWar/AtomicWar.html">Atomic War!</a> (1952)
+<li><a href="AceMagazines1.jpg">Baffling Mysteries</a> (1951)
+<li><a href="AceMagazines2.jpg">Banner Comics</a> (1941)
+<li><a href="../Beyond/Beyond.html">Beyond</a> (1950)
+<li><a href="AceMagazines4.jpg">Captain Courageous</a> (1942)
+<li><a href="AceMagazines5.jpg">Challenge of the Unknown</a> (1950)
+<li><a href="AceMagazines6.jpg">Four Favorites</a> (1941)
+<li><a href="AceMagazines7.jpg">Fun Time</a> (1953)
+<li><a href="AceMagazines8.jpg">Hand of Fate</a> (1951)
+<li><a href="AceMagazines9.jpg">Lightning Comics</a> (1940)
+<li><a href="../ScienceComics/ScienceComics.html">Science Comics</a> (1944)
+<li><a href="../SpaceAction/SpaceAction.html">Space Action</a> (1952)
+<li><a href="../WebOfMystery/WebOfMystery.html">Web of Mystery</a> (1951)
+<li><a href="AceMagazines10.jpg">World War III</a> (1952)
 </p>
 
 </body>
