--- a/AliceInSunderland/AliceInSunderland.html
+++ b/AliceInSunderland/AliceInSunderland.html
@@ -2,20 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Alice in Sunderland</title>
 </head>
 
 <body>
-<h2>Alice in Sunderland: An Entertainment</h2>
 <img src="AliceInSunderland.jpg">
-<img src="Alice1.jpg">
-<img src="Alice2.jpg"> <br>
-Series: 319 page Graphic Novel <br>
-Illustrator: Brian Talbot<br>
-Writer: Brian Talbot<br>
-Publisher: 2007 Jonathan Cape, Dark Horse<br>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="AliceInSunderland.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alice1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Alice2.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Alice in Sunderland: An Entertainment is a 319 page Graphic Novel by illustrator and writer Brian Talbot. Published in 2007 by Jonathan Cape and Dark Horse.
+</p><p>
 Written more like a history book than a story, it explores the links between Lewis Carroll and the Sunderland area (North East England), with wider themes of history, myth and storytelling. The art is done in collage or multimedia scrapbook style. 
 </p><p>
 The book focuses on Sunderland, but also covers other towns and cities in the area, such as Newcastle upon Tyne, Durham and Hartlepool. Local legends and tales are documented, including The Lambton Worm and the monkey hanged in Hartlepool.
