--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<img src="darkhorse.jpg" style="float:left" hspace="20">
+<img src="darkhorse.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,14 +18,17 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src="../1001NightsOfBacchus/1001nightsofbacchus.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../1001NightsOfBacchus/1001NightsOfBacchus.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../13thSon/13thSon1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="2Past1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../3StorySecretHistory/3StorySecretHistory.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="3x3Eyes1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="../AeonFlux/AeonFluxTV.jpg"></div>
-
-
+<div class="mySlides" style="text-align: center;"><img src="../AgeOfReptiles/AgeOfReptiles1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AgeOfReptiles/AgeOfReptiles2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AgeOfReptiles/AgeOfReptiles3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AgeOfReptiles/AgeOfReptiles4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../Alien3/Alien3_1.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -65,16 +68,17 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="../SuperheroGirl/superherogirl.html">Adventures of Superhero Girl</a>  (2013)
 <li><a href="../AdventuresOfMask/AdventuresOfMask.html">Adventures of the Mask</a>  (1996)
 <li><a href="../AeonFlux/aeonflux.html">Aeon Flux</a> (2005)
-<li>Age of Reptiles  (1993)
-<li>Age of Reptiles: Ancient Egyptians  (2015)
-<li>Age of Reptiles: The Hunt   (1996)
-<li>Age of Reptiles: The Journey   (2009)
+<li><a href="../AgeOfReptiles/AgeOfReptiles1.jpg">Age of Reptiles</a> (1993)
+<li><a href="../AgeOfReptiles/AgeOfReptiles2.jpg">Age of Reptiles: Ancient Egyptians</a> (2015)
+<li><a href="../AgeOfReptiles/AgeOfReptiles3.jpg">Age of Reptiles: The Hunt</a>   (1996)
+<li><a href="../AgeOfReptiles/AgeOfReptiles4.jpg">Age of Reptiles: The Journey</a>   (2009)
 <li><a href="../AgentsOfLaw/AgentsOfLaw.html">Agents of Law</a> (1995)
 <li><a href="../Akaneiro/akaneiro.html">Akaneiro</a> (2013)
 <li><a href="../Alabaster/alabaster.html">Alabaster: The Good, the Bad, and the Bird</a>    (2015)
 <li><a href="../Alabaster/alabaster.html">Alabaster: Wolves</a>    (2012)
+<li><a href="../AleisterAndAdolf/AleisterAndAdolf.html">Aleister &amp; Adolf</a> (2016)
 <li><a href="../AliceInSunderland/AliceInSunderland.html">Alice in Sunderland: An Entertainment</a> (2007)
-<li>Alien3 (1992)
+<li><a href="../Alien3/Alien3.html">Alien3</a> (1992)
 <li>Alien 3 Movie Special (1992)
 <li>Alien Resurrection  (1997)
 <li>Alien vs. Predator: Civilized Beasts (2008)
