--- a/ReedCrandall/ReedCrandall.html
+++ b/ReedCrandall/ReedCrandall.html
@@ -27,6 +27,8 @@
 <div class="mySlides" style="text-align: center;"><img src="ReedCrandall6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ReedCrandall7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ReedCrandall8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ReedCrandall9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ReedCrandall10.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
