--- a/index.html
+++ b/index.html
@@ -1264,6 +1264,14 @@
 </tr>
 
 <tr>
+<td>Aleister &amp; Adolf</td>
+<td>2016</td>
+<td>Dark Horse</td>
+<td><a href="AleisterAndAdolf/AleisterAndAdolf.html">Details</a></td>
+</tr>
+
+
+<tr>
 <td>Alex</td>
 <td>2006</td>
 <td>Fantagraphics</td>
@@ -2398,6 +2406,13 @@
 <td>2015</td>
 <td>IDW</td>
 <td><a href="AtomicRobo/AtomicRobo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Atomic War</td>
+<td>1952</td>
+<td>Ace Magazines</td>
+<td><a href="AtomicWar/AtomicWar.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4398,6 +4413,13 @@
 </tr>
 
 <tr>
+<td>Chick Publications</td>
+<td>1974</td>
+<td>Publisher</td>
+<td><a href="ChickPublications/ChickPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Children of the Voyager</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -5186,6 +5208,13 @@
 <td>1945</td>
 <td>McCombs</td>
 <td><a href="CrownComics/CrownComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Crusaders</td>
+<td>1974</td>
+<td>Chick</td>
+<td><a href="Crusaders/Crusaders.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11515,13 +11544,6 @@
 </tr>
 
 <tr>
-<td>Marvel Comics</td>
-<td>1961</td>
-<td>Publisher</td>
-<td><a href="Marvel/Marvel.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Marvel (Mystery) Comics</td>
 <td>1939</td>
 <td>Marvel</td>
@@ -11608,7 +11630,14 @@
 <tr>
 <td>Marvel Comics</td>
 <td>1939</td>
-<td>Marvel</td>
+<td>Publisher</td>
+<td><a href="Marvel/Marvel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Marvel Comics</td>
+<td>1939</td>
+<td>Timely</td>
 <td><a href="MarvelComics/marvelcomics.html">Details</a></td>
 </tr>
 
@@ -14916,6 +14945,13 @@
 <td>1969</td>
 <td>Creator</td>
 <td><a href="RoryHayes/RoryHayes.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Roy Crane</td>
+<td>1901</td>
+<td>Creator</td>
+<td><a href="RoyCrane/RoyCrane.html">Details</a></td>
 </tr>
 
 <tr>
