--- a/1001NightsOfBacchus/1001nightsofbacchus.html
+++ b/1001NightsOfBacchus/1001nightsofbacchus.html
@@ -2,21 +2,18 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>1001 Nights of Bacchus</title>
 </head>
 
 <body>
-<h2>1001 Nights of Bacchus</h2>
-<img src="1001NightsOfBacchus.jpg"><br>
-Illustrator: Eddie Campbell <br>
-Writer: Eddie Campbell<br>
-Publisher: May 1993 by Dark Horse<br>
+<img src="1001NightsOfBacchus.jpg">
 <p>
-About:<br>
+The 1001 Nights of Bacchus is Written and Illustrated by Eddie Campbell, published in May 1993 by Dark Horse.
+</p><p>
 Bacchus is a comics character created by Eddie Campbell and based upon the Roman god of wine and revelry, known to the Greeks as Dionysus. 1,001 Nights of Bacchus, a single issue comic book compilation of various other previously uncollected storylines which Campbell had placed with various publishers but which he had also created within a unified framing sequence.
 </p><p>
-Story:<br>
 When Bacchus turns up at the Traveller’s Joy free house, the owner treats him as an honored guest, and the patrons were happy to tip a few back with the man who invented the sport. In fact, they were so reluctant to leave after last call that the owner had to make them a deal: they could stay in the pub as long as old Bacchus stayed awake.
 </p><p>
 To keep him from nodding off, the patrons took turns telling their best bar stories, just as Scheherazade would tell stories in The Arabian Nights. Ultimately, their efforts were futile, but in the meanwhile they spun some great yarns of love, drunkenness, obsession, and the psychology of the dead
