--- a/index.html
+++ b/index.html
@@ -4154,6 +4154,13 @@
 </tr>
 
 <tr>
+<td>Carl Burgos</td>
+<td>1916</td>
+<td>Creator</td>
+<td><a href="CarlBurgos/CarlBurgos.html">Details</a><td>
+</tr>
+
+<tr>
 <td>Carlos Pacheco</td>
 <td>1962</td>
 <td>Creator</td>
@@ -10039,6 +10046,13 @@
 </tr>
 
 <tr>
+<td>Joe Doolin</td>
+<td>1896</td>
+<td>Creator</td>
+<td><a href="JosephDoolin/JosephDoolin.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Joe Jusko</td>
 <td>1959</td>
 <td>Creator</td>
@@ -11180,6 +11194,13 @@
 </tr>
 
 <tr>
+<td>Lou Fine</td>
+<td>1914</td>
+<td>Creator</td>
+<td><a href="LouFine/LouFine.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Louis Wain</td>
 <td>1900</td>
 <td>Creator</td>
@@ -11306,7 +11327,14 @@
 </tr>
 
 <tr>
-<td><a name ="m">Machine Man</td>
+<td><a name ="m">Mac Raboy</td>
+<td>1914</td>
+<td>Creator</td>
+<td><a href="MacRaboy/MacRaboy.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Machine Man</td>
 <td>1978</td>
 <td>Marvel</td>
 <td><a href="MachineMan/MachineMan.html">Details</a></td>
@@ -12066,6 +12094,13 @@
 <td>1982</td>
 <td>Mattel</td>
 <td><a href="MastersOfTheUniverse/MastersOfTheUniverse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Matt Baker</td>
+<td>1921</td>
+<td>Creator</td>
+<td><a href="MattBaker/MattBaker.html">Details</a></td>
 </tr>
 
 <tr>
