--- a/CaliberComics/CaliberComics.html
+++ b/CaliberComics/CaliberComics.html
@@ -31,6 +31,12 @@
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics12.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CaliberComics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaliberComics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaliberComics15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaliberComics16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaliberComics17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaliberComics18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CaliberComics19.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -42,12 +48,18 @@ Titles
 </p><p>
 <li><a href="CaliberComics2.jpg">A.K.A. Goldfish</a> (1994)
 <li><a href="CaliberComics3.jpg">Alan Moore's Songbook</a> (1998)
+<li><a href="CaliberComics14.jpg">Airwaves</a> (1991)
+<li><a href="CaliberComics15.jpg">Apparition</a> (1996)
 <li><a href="CaliberComics4.jpg">Ashes</a> (1990)
+<li><a href="CaliberComics16.jpg">Atomic Overdrive</a> (1997)
+<li><a href="CaliberComics17.jpg">Attitude Lab</a> (1992)
+<li><a href="CaliberComics18.jpg">Autumn</a> (1995)
 <li><a href="CaliberComics5.jpg">Baker Street</a> (1989)
 <li><a href="CaliberComics6.jpg">Beck &amp; Caul</a> (1994)
 <li><a href="CaliberComics7.jpg">Big Bang Comics</a> (1994)
 <li><a href="CaliberComics8.jpg">Black Mist</a> (1994)
 <li><a href="CaliberComics9.jpg">Boston Bombers</a> (1990)
+<li><a href="CaliberComics19.jpg">Brandy Man</a> (1996)
 <li><a href="CaliberComics10.jpg">Brian Lumley Necroscope</a> (1997)
 <li><a href="CaliberComics11.jpg">Caliber Presents</a> (1989)
 <li><a href="CaliberComics12.jpg">Cavewoman: Rain</a> (1996)
