--- a/Eclipse/Eclipse.html
+++ b/Eclipse/Eclipse.html
@@ -96,7 +96,7 @@ Eclipse Titles
 <li>Detectives Inc.: A Remembrance of Threatening Green (1980)
 <li>Detectives, Inc.: A Terror of Dying Dreams (1985)
 <li>Destroy!!
-<li>Destroyer Duck
+<li><a href="../DestroyerDuck/DestroyerDuck.html">Destroyer Duck</a> (1982)
 <li>Dinosaurs Attack!
 <li>Directory to a Non-Existent Universe
 <li>The Dirty Pair: Biohazards
