--- a/ContractWithGod/contractwithgod.html
+++ b/ContractWithGod/contractwithgod.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>A Contract With God</title>
 </head>
 
 <body>
 <img src="ContractWithGod.jpg"><br>
-1 issue in 1978 by Baronet Books<br>
-Created by Will Eisner
+1 issue in 1978 by Baronet Books created by <a href="../WillEisner/WillEisner.html">Will Eisner</a>
 <p>
 The book that coined the phrase Graphic Novel, it contains four stories: A Contract with God, The Street Singer, The Super, Cookalein. Following the author's introduction, "A Tenement in the Bronx", the book contains four stories set in a tenement building. They derive in part from Eisner's personal memories growing up in a tenement in the Bronx.
 </p><p>
