--- a/WillEisner/WillEisner.html
+++ b/WillEisner/WillEisner.html
@@ -25,12 +25,27 @@
 <div class="mySlides" style="text-align: center;"><img src="WillEisner04.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WillEisner05.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WillEisner06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillEisner07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillEisner08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillEisner09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillEisner10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillEisner11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillEisner12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillEisner13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillEisner14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillEisner15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WillEisner16.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
 William Erwin Eisner (March 6, 1917 – January 3, 2005) was an American cartoonist, writer, and entrepreneur. He was one of the earliest cartoonists to work in the American comic book industry, and his series The Spirit (1940–1952) was noted for its experiments in content and form. In 1978, he popularized the term "graphic novel" with the publication of his book A Contract with God. He was an early contributor to formal comics studies with his book Comics and Sequential Art (1985). The Eisner Award was named in his honor, and is given to recognize achievements each year in the comics medium; he was one of the three inaugural inductees to the Will Eisner Comic Book Hall of Fame.
+</p><p>
+<li><a href="../DollMan/DollMan.html">Doll Man</a> (1941)
+<li><a href="../Spirit/Spirit.html">the Spirit</a> (1940)
+<li><a href="../ContractWithGod/contractwithgod.html">A Contract With God</a> (1978)
+
 </p>
 </body>
 </html>
