--- a/JimSteranko/JimSteranko.html
+++ b/JimSteranko/JimSteranko.html
@@ -30,6 +30,7 @@
 <div class="mySlides" style="text-align: center;"><img src="JimSteranko09.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JimSteranko10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JimSteranko11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JimSteranko12.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
