--- a/NFAOS/NFAOS.html
+++ b/NFAOS/NFAOS.html
@@ -9,18 +9,7 @@
 <body>
 
 <img src="NFAOS001.jpg"> <br>
-18 issues 1968-1971 by Marvel<br>
-Written and illustrated by <a href="../JimSteranko/JimSteranko.html">Jim Steranko</a>
 <p>
-Colonel Nicholas Joseph Fury is a fictional character appearing in American comic books published by Marvel Comics. Created by writer/artist Jack Kirby and writer Stan Lee, Fury first appeared in Sgt. Fury and his Howling Commandos #1 (May 1963), a World War II combat series that portrayed the cigar-chomping Fury as leader of an elite U.S. Army unit. A popular character over a number of decades, in 2011, Fury was ranked 33rd in IGN's Top 100 Comic Book Heroes, and 32nd in their list of "The Top 50 Avengers". He has sometimes been considered an antihero.
-</p><p>
-The modern-day Fury, initially a CIA agent, debuted a few months later in Fantastic Four #21 (Dec. 1963). In Strange Tales #135 (Aug. 1965), the character was transformed into a spy like James Bond and leading agent of the fictional espionage agency S.H.I.E.L.D. The character makes frequent appearances in Marvel books as the former head of S.H.I.E.L.D. and as an intermediary between the U.S. government or the United Nations and various superheroes. It is eventually revealed that Fury takes a special medication called the Infinity Formula that halted his aging and allows him to be active despite being nearly a century old.
-</p><p>
-Nick Fury appears in several Marvel series set in alternate universes, as well as multiple animated films, television shows, and video games based on the comics. The character was first portrayed in live action by David Hasselhoff in the 1998 television movie Nick Fury: Agent of S.H.I.E.L.D. Samuel L. Jackson later signed a nine-picture deal to portray the character in the Marvel Cinematic Universe franchise, first appearing in the 2008 film Iron Man.
-</p><p>
-Jackson also cameos in multiple episodes of the related Marvel television show Agents of S.H.I.E.L.D. A version of the character appearing in Marvel's Ultimate Marvel imprint was based on Jackson's appearance and screen persona, well before he was cast in the role. The recognizability of the character portrayed by Jackson in the films later led Marvel to retire the original character, replacing him with his African American son Nick Fury Jr., who like the Ultimate Marvel version is patterned on Jackson.
-</p><p>
-
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -60,6 +49,16 @@ Jackson also cameos in multiple episodes of the related Marvel television show A
 </div></div>
 </p><p>
 
+18 issues 1968-1971 by Marvel, written and illustrated by <a href="../JimSteranko/JimSteranko.html">Jim Steranko</a>
+</p><p>
+Colonel Nicholas Joseph Fury is a fictional character appearing in American comic books published by Marvel Comics. Created by writer/artist Jack Kirby and writer Stan Lee, Fury first appeared in Sgt. Fury and his Howling Commandos #1 (May 1963), a World War II combat series that portrayed the cigar-chomping Fury as leader of an elite U.S. Army unit. A popular character over a number of decades, in 2011, Fury was ranked 33rd in IGN's Top 100 Comic Book Heroes, and 32nd in their list of "The Top 50 Avengers". He has sometimes been considered an antihero.
+</p><p>
+The modern-day Fury, initially a CIA agent, debuted a few months later in Fantastic Four #21 (Dec. 1963). In Strange Tales #135 (Aug. 1965), the character was transformed into a spy like James Bond and leading agent of the fictional espionage agency S.H.I.E.L.D. The character makes frequent appearances in Marvel books as the former head of S.H.I.E.L.D. and as an intermediary between the U.S. government or the United Nations and various superheroes. It is eventually revealed that Fury takes a special medication called the Infinity Formula that halted his aging and allows him to be active despite being nearly a century old.
+</p><p>
+Nick Fury appears in several Marvel series set in alternate universes, as well as multiple animated films, television shows, and video games based on the comics. The character was first portrayed in live action by David Hasselhoff in the 1998 television movie Nick Fury: Agent of S.H.I.E.L.D. Samuel L. Jackson later signed a nine-picture deal to portray the character in the Marvel Cinematic Universe franchise, first appearing in the 2008 film Iron Man.
+</p><p>
+Jackson also cameos in multiple episodes of the related Marvel television show Agents of S.H.I.E.L.D. A version of the character appearing in Marvel's Ultimate Marvel imprint was based on Jackson's appearance and screen persona, well before he was cast in the role. The recognizability of the character portrayed by Jackson in the films later led Marvel to retire the original character, replacing him with his African American son Nick Fury Jr., who like the Ultimate Marvel version is patterned on Jackson.
+</p><p>
 Issues:<ul>
 <li><a href="NFAOS001.html">Issue #1 Who is Scorpio</a></li>
 
