--- a/index.html
+++ b/index.html
@@ -10018,6 +10018,13 @@
 </tr>
 
 <tr>
+<td>Jim Mafood</td>
+<td>1975</td>
+<td>Creator</td>
+<td><a href="JimMafood/JimMafood.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jim Starlin</td>
 <td>1949</td>
 <td>Creator</td>
