--- a/index.html
+++ b/index.html
@@ -6051,6 +6051,13 @@
 </tr>
 
 <tr>
+<td>Devil Jack</td>
+<td>1995</td>
+<td>Doom Theatre</td>
+<td><a href="TimTyler/TimTyler.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Devil-Dog Dugan</td>
 <td>1956</td>
 <td>Atlas</td>
@@ -7311,6 +7318,13 @@
 <td>2012</td>
 <td>Image</td>
 <td><a href="Fatale/Fatale.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fathom Press</td>
+<td>1990</td>
+<td>Publisher</td>
+<td><a href="FathomPress/FathomPress.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17346,6 +17360,13 @@
 <td>1970</td>
 <td>Creator</td>
 <td><a href="TimLaneUK/TimLaneUK.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tim Tyler</td>
+<td>1975</td>
+<td>Creator</td>
+<td><a href="TimTyler/TimTyler.html">Details</a></td>
 </tr>
 
 <tr>
