--- a/index.html
+++ b/index.html
@@ -10445,6 +10445,13 @@
 </tr>
 
 <tr>
+<td>Kevin Eastman</td>
+<td>1962</td>
+<td>Creator</td>
+<td><a href="KevinEastman/KevinEastman.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Key Publications</td>
 <td>1951</td>
 <td>Publisher</td>
@@ -12780,6 +12787,13 @@
 <td>2010</td>
 <td>Image</td>
 <td><a href="MorningGlories/MorningGlories.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mort Drucker</td>
+<td>1929</td>
+<td>Creator</td>
+<td><a href="MortDrucker/MortDrucker.html">Details</a></td>
 </tr>
 
 <tr>
