--- a/ECComics/ECComics.html
+++ b/ECComics/ECComics.html
@@ -18,6 +18,7 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
+<div class="mySlides" style="text-align: center;"><img src="3DECClassics1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="CryptOfTerror17.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Extra1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Gunfighter5.jpg"></div>
@@ -36,9 +37,8 @@
 <div class="mySlides" style="text-align: center;"><img src="Psychoanalysis1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="SaddleJustice3.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Shock1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Terrorillustrated1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TerrorIllustrated1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TinyTot1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="3DECClassics1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="TwoFistedTales18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Valor1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="WarAgainstCrime1.jpg"></div>
@@ -89,7 +89,7 @@ In 1954–55, censorship pressures prompted it to concentrate on the humor magaz
 <li><a href="SaddleJustice3.jpg">Saddle Justice</a>  (1948)
 <li><a href="Shock1.jpg">Shock Illustrated</a> (1955)
 <li><a href="../ShockSuspenstories/ShockSuspenstories.html">Shock SuspenStories</a> (1952)
-<li><a href="Terrorillustrated1.jpg">Terror Illustrated</a> (1955)
+<li><a href="TerrorIllustrated1.jpg">Terror Illustrated</a> (1955)
 <li><a href="CryptOfTerror17.jpg">The Crypt of Terror</a> (1950)
 <li><a href="../TalesFromTheCrypt/TalesFromTheCrypt.html">Tales from the Crypt</a> (1950)
 <li><a href="../HauntOfFear/HauntOfFear.html">The Haunt of Fear</a> (1950)
